--- a/{{cookiecutter.repo_name}}/.github/workflows/publish.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/publish.yml
@@ -78,19 +78,19 @@ jobs:
           ./dist/*.whl
     - name: Create GitHub Release
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: {{"${{ github.token }}"}}
       run: >-
         gh release create
-        '${{ github.ref_name }}'
-        --repo '${{ github.repository }}'
+        '{{"${{ github.ref_name }}"}}'
+        --repo '{{"${{ github.repository }}"}}'
         --notes ""
     - name: Upload artifact signatures to GitHub Release
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: {{"${{ github.token }}"}}
       # Upload to GitHub Release using the `gh` CLI.
       # `dist/` contains the built packages, and the
       # sigstore-produced signatures and certificates.
       run: >-
         gh release upload
-        '${{ github.ref_name }}' dist/**
-        --repo '${{ github.repository }}'
+        '{{"${{ github.ref_name }}"}}' dist/**
+        --repo '{{"${{ github.repository }}"}}'
