--- a/{{cookiecutter.repo_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.repo_name}}/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: {{"${{ matrix.os }}"}}
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python {{"${{ matrix.python-version }}"}}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: {{"${{ matrix.python-version }}"}}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
